<resources>
    <string name="app_name">Musical Structure</string>
    <string name="app">.App</string>
    <string name="timer">0:00</string>
    <string name="song_image">Song Image</string>
    <string name="repeat_button">Repeat Button</string>
    <string name="playlist_button">Playlist Button</string>
    <string name="suffle_button">Suffle Button</string>
    <string name="previous_button">Previous Button</string>
    <string name="play_button">Play Button</string>
    <string name="next_button">Next Button</string>
    <string name="option_menu">Option Menu</string>
    <string name="album_image">Album Image</string>
    <string name="album_name">Album Name</string>
    <string name="arijit_singh">Arijit Singh</string>
    <string name="shreya_ghoshal">Shreya Ghoshal</string>
    <string name="charlie_puth">Charlie Puth</string>
    <string name="ellie_goulding">Ellie Goulding</string>
    <string name="rihanna">Rihanna</string>
    <string name="harshdeep_kaur">Harshdeep Kaur</string>
    <string name="zack_knight_jasmin_walia">Zack Knight, Jasmin Walia</string>
    <string name="badshah">Badshah</string>
    <string name="justin_bieber">Justin Bieber</string>
    <string name="taylor_swift">Taylor Swift</string>
    <string name="jennifer_lopez">Jennifer Lopez</string>
    <string name="ed_sheeran">Ed Sheeran</string>
    <string name="rahat_fateh_ali_khan">Rahat Fateh Ali Khan</string>
    <string name="love_songs">Love Songs</string>
    <string name="super_hits">Super Hits</string>
    <string name="dj_songs">Dj Songs</string>
    <string name="dangal">Dangal</string>
    <string name="padmaavat">Padmaavat</string>
    <string name="badrinathkidulhania">Badrinath Ki Dulhaniya</string>
    <string name="padman">Padman</string>
    <string name="raid">Raid</string>
    <string name="raazi">Raazi</string>
    <string name="befikre">Befikre</string>
    <string name="sonuketitukisweety">Sonu Ke Titu Ki Sweety</string>
    <string name="veerediwedding">Veere Di Wedding</string>
    <string name="baadshaho">Baadshaho</string>
    <string name="dangal_naina">Naina - Dangal</string>
    <string name="ghoomar_padmaavat">Ghoomar - Padmaavat</string>
    <string name="ellie_goulding_love_me_like_you_do">Love Me Like You Do</string>
    <string name="see_you_again_feat_charlie_puth">See You Again</string>
    <string name="badrikidulhania_roke_na_nuke_naina">Roke Na Ruke Naina - Badrinath Ki Dulhaniya</string>
    <string name="padman_aaj_se_teri">Aaj Se Teri - Padman</string>
    <string name="rihanna_diamonds">Diamonds</string>
    <string name="raid_nit_khair_manga">Nit Khair Manga - Raid</string>
    <string name="ed_sheeran_shape_of_you">Shape Of You</string>
    <string name="raazi_dilbaro">Dilbaro - Raazi</string>
    <string name="befikre_nashe_si_chadh_gayi">Nashe Si Chad Gayi - Befikre</string>
    <string name="sonuketitukisweety_bom_diggy_diggy">Bom Diggy Diggy - Sonu Ke Titu Ki Sweety</string>
    <string name="veerediwedding_tareefan">Tareefan - Veere Di Wedding</string>
    <string name="baadshaho_mere_rashke_qamar">Mere Rashke Qamar - Baadshaho</string>
    <string name="colon">%d:%d</string>
</resources>
