<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/now_playing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NowPlayingActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_8dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/song_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/configuration"
        android:layout_below="@id/appbar"
        android:contentDescription="@string/song_image"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/configuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/padding_8dp">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_controls_height"
            android:layout_margin="@dimen/margin_8dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/width_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/time_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/timer"
                    android:textColor="@color/colorBlack"
                    tools:ignore="RelativeOverlap" />

                <ImageButton
                    android:id="@+id/btn_repeat"
                    android:layout_width="@dimen/btn_repeat_shuffle_size"
                    android:layout_height="@dimen/btn_repeat_shuffle_size"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_repeat_off_24dp"
                    android:contentDescription="@string/repeat_button" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/width_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btn_playlist"
                    android:layout_width="@dimen/btn_playlist_size"
                    android:layout_height="@dimen/btn_playlist_size"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_playlist_24dp"
                    android:contentDescription="@string/playlist_button" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/width_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/btn_shuffle"
                    android:layout_width="@dimen/btn_repeat_shuffle_size"
                    android:layout_height="@dimen/btn_repeat_shuffle_size"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_shuffle_off_24dp"
                    android:contentDescription="@string/suffle_button" />

                <TextView
                    android:id="@+id/time_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/timer"
                    android:textColor="@color/colorBlack"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_weight="4">

            <ImageButton
                android:id="@+id/btn_previous"
                android:layout_width="@dimen/btn_previous_next_size"
                android:layout_height="@dimen/btn_previous_next_size"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_16dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:background="@drawable/ic_skip_previous_24dp"
                android:contentDescription="@string/previous_button" />

            <ImageButton
                android:id="@+id/btn_play"
                android:layout_width="@dimen/btn_play_size"
                android:layout_height="@dimen/btn_play_size"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_play_circle_24dp"
                android:contentDescription="@string/play_button" />

            <ImageButton
                android:id="@+id/btn_next"
                android:layout_width="@dimen/btn_previous_next_size"
                android:layout_height="@dimen/btn_previous_next_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_16dp"
                android:layout_marginRight="@dimen/margin_16dp"
                android:background="@drawable/ic_skip_next_24dp"
                android:contentDescription="@string/next_button" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>